; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmarks_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmarks_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32* }
%struct.TYPE_11__ = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_get_bookmarks_impl(%struct.TYPE_10__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @dsl_pool_config_held(i32* %16)
  %18 = call i32 @ASSERT(i32 %17)
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %20 = call i64 @dsl_dataset_is_snapshot(%struct.TYPE_10__* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %3
  %23 = load i32, i32* @EINVAL, align 4
  %24 = call i32 @SET_ERROR(i32 %23)
  store i32 %24, i32* %4, align 4
  br label %54

25:                                               ; preds = %3
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 0
  %28 = call %struct.TYPE_11__* @avl_first(i32* %27)
  store %struct.TYPE_11__* %28, %struct.TYPE_11__** %9, align 8
  br label %29

29:                                               ; preds = %48, %25
  %30 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %31 = icmp ne %struct.TYPE_11__* %30, null
  br i1 %31, label %32, label %53

32:                                               ; preds = %29
  %33 = call i32* (...) @fnvlist_alloc()
  store i32* %33, i32** %10, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %35, i32 0, i32 1
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @dsl_bookmark_fetch_props(i32* %34, i32* %36, i32* %37, i32* %38)
  %40 = load i32*, i32** %7, align 8
  %41 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %10, align 8
  %45 = call i32 @fnvlist_add_nvlist(i32* %40, i32 %43, i32* %44)
  %46 = load i32*, i32** %10, align 8
  %47 = call i32 @fnvlist_free(i32* %46)
  br label %48

48:                                               ; preds = %32
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 0
  %51 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %52 = call %struct.TYPE_11__* @AVL_NEXT(i32* %50, %struct.TYPE_11__* %51)
  store %struct.TYPE_11__* %52, %struct.TYPE_11__** %9, align 8
  br label %29

53:                                               ; preds = %29
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %53, %22
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @dsl_pool_config_held(i32*) #1

declare dso_local i64 @dsl_dataset_is_snapshot(%struct.TYPE_10__*) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local %struct.TYPE_11__* @avl_first(i32*) #1

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @dsl_bookmark_fetch_props(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @fnvlist_add_nvlist(i32*, i32, i32*) #1

declare dso_local i32 @fnvlist_free(i32*) #1

declare dso_local %struct.TYPE_11__* @AVL_NEXT(i32*, %struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
